# odin-sdk

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
include/: odin.h  odin_crypto.h
test/: CMakeLists.txt
test/cmake/: dependencies.cmake
test/src/: api.hpp  main.c  main.cpp
